--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
-.gitattributes export-ignore
-.gitignore export-ignore
+/tests export-ignore
+/.editorconfig export-ignore
+/.gitattributes export-ignore
+/.gitignore export-ignore
+/.travis.yml export-ignore
+/LICENSE export-ignore
+/phpstan.neon export-ignore
+/README.md export-ignore
