--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "elasticsearch/elasticsearch": "^6.0"
     },
     "require-dev": {
-        "nette/tester": "^2.0"
+        "ninjify/qa": "^0.7.1",
+        "ninjify/nunjuck": "^0.2.0",
+        "monolog/monolog": "^1.23"
     },
     "support": {
         "email": "vojtech.mares@fiolasoft.cz",
@@ -24,8 +26,28 @@
         }
     ],
     "autoload": {
-        "psr-0": {
-            "FiolaSoft\\ElasticSearch\\": "src/"
+        "psr-4": {
+            "FiolaSoft\\": "src/"
         }
+    },
+    "scripts": {
+        "qa": [
+            "linter src tests",
+            "codesniffer src tests"
+        ],
+        "tester": [
+            "tester -s -p php --colors 1 -C tests/cases"
+        ],
+        "coverage": [
+            "tester -s -p php --colors 1 -C -d extension=xdebug.so --coverage ./coverage.xml --coverage-src ./src tests/cases"
+        ],
+        "phpstan-install": [
+            "mkdir -p temp/phpstan",
+            "composer require -d temp/phpstan phpstan/phpstan:0.9.2",
+            "composer require -d temp/phpstan phpstan/phpstan-nette:0.9"
+        ],
+        "phpstan": [
+            "temp/phpstan/vendor/bin/phpstan analyse -l 7 -c phpstan.neon src"
+        ]
     }
 }
