--- a/.editorconfig
+++ b/.editorconfig
@@ -11,7 +11,7 @@ insert_final_newline = true
 # JS / PHP
 [*.{js,php,phpt}]
 charset = utf-8
-indent_style = tab
+indent_style = space
 indent_size = 4
 
 # Composer
