--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
     },
     "require-dev": {
         "fiolasoft/qa": "^0.7.2",
-        "ninjify/nunjuck": "^0.2.0"
+        "ninjify/nunjuck": "^0.2.0",
+        "phpstan/phpstan": "^0.9.2",
+        "phpstan/phpstan-nette": "^0.9.0"
     },
     "support": {
         "email": "vojtech.mares@fiolasoft.cz",
@@ -48,13 +50,8 @@
         "coverage": [
             "tester -s -p php --colors 1 -C -d extension=xdebug.so --coverage ./coverage.xml --coverage-src ./src tests/cases"
         ],
-        "phpstan-install": [
-            "mkdir -p temp/phpstan",
-            "composer require -d temp/phpstan phpstan/phpstan:0.9.2",
-            "composer require -d temp/phpstan phpstan/phpstan-nette:0.9"
-        ],
         "phpstan": [
-            "temp/phpstan/vendor/bin/phpstan analyse -l 7 -c phpstan.neon src"
+            "phpstan analyse -l 7 -c phpstan.neon src"
         ]
     }
 }
