--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,6 @@
 /.gitignore export-ignore
 /.travis.yml export-ignore
 /LICENSE export-ignore
-/phpstan.neon export-ignore
+/.phpstan.neon export-ignore
 /README.md export-ignore
+/.docs export-ignore
