--- a/composer.json
+++ b/composer.json
@@ -7,21 +7,21 @@
     "require": {
         "php": ">=7.1",
         "nette/di": "^2.4",
-        "elasticsearch/elasticsearch": "^6.0",
-        "monolog/monolog": "^1.23"
+        "elasticsearch/elasticsearch": "^6.0"
     },
     "require-dev": {
         "fiolasoft/qa": "^0.7.2",
         "ninjify/nunjuck": "^0.2.0",
         "phpstan/phpstan": "^0.9.2",
-        "phpstan/phpstan-nette": "^0.9.0"
+        "phpstan/phpstan-nette": "^0.9.0",
+        "monolog/monolog": "^1.23"
     },
     "support": {
         "email": "vojtech.mares@fiolasoft.cz",
         "issues": "https://github.com/FiolaSoft/elasticsearch/issues"
     },
     "suggest": {
-        "kdyby/monolog": "^1.3"
+        "monolog/monolog": "^1.23"
     },
     "license": "MIT",
     "authors": [
